--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,24 +65,6 @@
     <div class="container">
       <div class="row">
         <div class="span3">
-          {% if page.date %}
-          <div class="padding10 content aside">
-            <small class="muted"><i class="icon-calendar"></i> Posté le {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</small><hr>
-            <i class="icon-tags"></i> Tags<br />
-            {% for tag in page.tags %}
-            <span class="label {{ tag }}">{{ tag }}</span>
-            {% endfor %}
-          </div>
-          {% endif %}
-        </div>
-        <div class="span6 content">
-          {% if page.title %}
-          <h1 class="text-center">{{ page.title }}</h1>
-          <hr>
-          {% endif %}
-          {{ content }}
-        </div>
-        <div class="span3">
           <div class="content aside padding10">
             <h4>Florent Viel</h4>
             <hr>
@@ -108,6 +90,34 @@
           </div>
           {% endif %}
         </div>
+        <div class="span6 content">
+          {% if page.title %}
+          <h1 class="text-center">{{ page.title }}</h1>
+          <hr>
+          {% endif %}
+          {{ content }}
+        </div>
+        <div class="span3">
+          {% if page.date %}
+          <div class="padding10 content aside">
+            <small class="muted"><i class="icon-calendar"></i> Posté le {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</small><hr>
+            <i class="icon-tags"></i> Tags<br />
+            {% for tag in page.tags %}
+            <span class="label {{ tag }}">{{ tag }}</span>
+            {% endfor %}
+          </div>
+          {% endif %}
+          <div class="padding10 content aside">
+            <script type="text/javascript"><!--
+            google_ad_client = "ca-pub-7830736355539933";
+            /* Blog aside-carré */
+            google_ad_slot = "5182199653";
+            google_ad_width = 200;
+            google_ad_height = 200;
+            //-->
+            </script>
+          </div>
+        </div>
       </div>
     </div>
     <script src="http://code.jquery.com/jquery.min.js"></script>
@@ -121,6 +131,9 @@
         po.src = 'https://apis.google.com/js/plusone.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
       })();
+    </script>
+    <script type="text/javascript"
+    src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     </script>
   </body>
 </html>
