revert https on external links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,8 +73,8 @@
             </div>
             <br /><br />
             <ul class="unstyled">
-              <li><a href="https://github.com/luxifer" target="_blank"><i class="icon-github"></i> Github</a></li>
-              <li><a href="https://twitter.com/florent_viel" target="_blank"><i class="icon-twitter"></i> Twitter</a></li>
+              <li><a href="http://github.com/luxifer" target="_blank"><i class="icon-github"></i> Github</a></li>
+              <li><a href="http://twitter.com/florent_viel" target="_blank"><i class="icon-twitter"></i> Twitter</a></li>
               <li><a href="http://fr.linkedin.com/in/florentviel/" target="_blank"><i class="icon-linkedin"></i> Linked'in</a></li>
             </ul>
           </div>
