--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2100,7 +2100,7 @@ table th[class*="span"],
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url(/images/glyphicons-halflings.png?1362135064);
+  background-image: url(/images/glyphicons-halflings.png?1363509079);
   background-position: 14px 14px;
   background-repeat: no-repeat;
   margin-top: 1px;
@@ -2124,7 +2124,7 @@ table th[class*="span"],
 .dropdown-submenu:focus > a > [class^="icon-"],
 .dropdown-submenu:hover > a > [class*=" icon-"],
 .dropdown-submenu:focus > a > [class*=" icon-"] {
-  background-image: url(/images/glyphicons-halflings-white.png?1362135064);
+  background-image: url(/images/glyphicons-halflings-white.png?1363509079);
 }
 
 .icon-glass {
@@ -7137,5 +7137,13 @@ ul.unstyled li:last-child {
 }
 
 footer {
-  background: #eee;
+  border-top: 5px solid #5e777d;
+  background-image: url("/images/escheresque.png");
+  padding: 20px 0;
+}
+footer a {
+  color: #333;
+}
+footer .span4 {
+  padding: 0 10px;
 }
