--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
             <a class="brand" href="/">{{ site.title }}</a>
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li><a href="/a-propos.html">A propos</a></li>
+                <li><a href="/a-propos/">A propos</a></li>
                 <li class="dropdown">
                   <a class="dropdown-toggle" data-toggle="dropdown" href="#">Services</a>
                   <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -131,9 +131,7 @@
           <div class="span4">
             <h4>Pages</h4>
             <ul class="unstyled">
-            {% for page in  site.pages %}
-              <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-            {% endfor %}
+              <li><a href="/a-propos/">A propos</a></li>
             </ul>
           </div>
         </div>
