--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -7148,5 +7148,5 @@ footer .span4 {
   padding: 0 10px;
 }
 footer ul.unstyled li {
-  border-bottom: 1px solid #999999;
+  border-bottom: 1px solid #bfbfbf;
 }
