--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -119,7 +119,7 @@ footer {
     }
     ul.unstyled {
         li {
-            border-bottom: 1px solid $grayLight;
+            border-bottom: 1px solid lighten($grayLight, 15%);
         }
     }
 }
