--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,7 +113,7 @@
     <footer>
       <div class="container">
         <div class="row-fluid">
-          <div class="span4">
+          <div class="span4  php">
             <h4>Dernières publications</h4>
             <ul class="unstyled">
             {% for post in  site.posts limit:5 %}
@@ -121,14 +121,14 @@
             {% endfor %}
             </ul>
           </div>
-          <div class="span4">
+          <div class="span4 python">
             <h4>Liens</h4>
             <ul class="unstyled">
               <li><a href="/sitemap.xml">Plan du site</a></li>
               <li><a href="/atom.xml">RSS</a></li>
             </ul>
           </div>
-          <div class="span4">
+          <div class="span4 ruby">
             <h4>Pages</h4>
             <ul class="unstyled">
               <li><a href="/a-propos/">A propos</a></li>
