--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -110,12 +110,20 @@ ul.unstyled {
 footer {
     border-top: 5px solid #5e777d;
     background-image: url('/images/escheresque.png');
-    padding: 20px 0;
     a {
         color: #333;
     }
     .span4 {
-        padding: 0 10px;
+        padding: 20px 10px;
+        &.php {
+            border-top: 5px solid $php;
+        }
+        &.python {
+            border-top: 5px solid $python;
+        }
+        &.ruby {
+            border-top: 5px solid $ruby;
+        }
     }
     ul.unstyled {
         li {
