--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -7139,13 +7139,21 @@ ul.unstyled li:last-child {
 footer {
   border-top: 5px solid #5e777d;
   background-image: url("/images/escheresque.png");
-  padding: 20px 0;
 }
 footer a {
   color: #333;
 }
 footer .span4 {
-  padding: 0 10px;
+  padding: 20px 10px;
+}
+footer .span4.php {
+  border-top: 5px solid #7777aa;
+}
+footer .span4.python {
+  border-top: 5px solid #ffbc29;
+}
+footer .span4.ruby {
+  border-top: 5px solid #c61a1a;
 }
 footer ul.unstyled li {
   border-bottom: 1px solid #bfbfbf;
