--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -1,9 +1,5 @@
 $linkColor: #5e777d;
 $baseFontSize: 16px;
-$gridColumnWidth: 70px;
-$gridColumnWidth1200: 70px;
-$gridGutterWidth: 20px;
-$gridGutterWidth1200: 20px;
 $sansFontFamily: 'Poly', serif;
 
 @import "bootstrap";
@@ -15,12 +11,8 @@ body {
     background-image: url('/images/graphy.png');
 }
 
-h1, h2, h3 {
-    font-family: 'Lobster Two', cursive;
-}
-
-h4, h5, h6 {
-    font-family: 'Merriweather Sans', sans-serif;
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Josefin Slab', serif;
 }
 
 pre {
@@ -127,7 +119,7 @@ footer {
     }
     ul.unstyled {
         li {
-            border-bottom: 1px solid lighten($grayLight, 15%);
+            border: none;
         }
     }
 }
