--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,14 +35,20 @@ layout: default
 <div class="comments padding10">
   <div id="disqus_thread"></div>
   <script type="text/javascript">
-    var disqus_identifier = "{{ page.meta.dsq_thread_id ? page.meta.dsq_thread_id : page.url }}";
-    (function() {
-     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-     dsq.src = 'http://{{ site.disqus.id }}.disqus.com/embed.js';
-     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
+      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+      var disqus_shortname = '{{ site.disqus.id }}'; // required: replace example with your forum shortname
+      var disqus_url = 'http://{{ site.domain }}{{ page.url }}';
+      var disqus_title = "{{ page.title }}";
+      var disqus_identifier = '{{ page.meta.dsq_thread_id ? page.meta.dsq_thread_id : page.url }}';
+
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+      (function() {
+          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
   </script>
-  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript={{ site.disqus.id }}">comments powered by Disqus.</a></noscript>
-  <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 </div>
 {% endif %}
