--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" media="screen" href="/stylesheets/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" media="screen" href="/stylesheets/font-awesome-ie7.min.css" type="text/css">
     <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Blog de Florent Viel">
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
     {% if site.feedburner %}
     <link href="http://feeds.feedburner.com/{{ site.feedburner.id }}" rel="alternate" title="{{ site.title }}" type="application/atom+xml" />
     {% endif %}
