--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,9 +51,9 @@
                 <li class="dropdown">
                   <a class="dropdown-toggle" data-toggle="dropdown" href="#">Services</a>
                   <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                    <li><a href="http://git.luxifer.fr" target="_blank">Gitlab</a></li>
-                    <li><a href="http://cloud.luxifer.fr" target="_blank">Cloud privé</a></li>
-                    <li><a href="http://lxr.wf" target="_blank">URL Shortener</a></li>
+                    <li role="menuitem"><a href="http://git.luxifer.fr" target="_blank">Gitlab</a></li>
+                    <li role="menuitem"><a href="http://cloud.luxifer.fr" target="_blank">Cloud privé</a></li>
+                    <li role="menuitem"><a href="http://lxr.wf" target="_blank">URL Shortener</a></li>
                   </ul>
                 </li>
                 <li><a href="http://florentviel.com" target="_blank">CV</a></li>
@@ -73,7 +73,7 @@
             <h4 itemprop="name">Florent Viel</h4>
             <hr>
             <div class="img-polaroid">
-              <img src="http://www.gravatar.com/avatar/34df2fcf73fb6b987f3e2ea2bcf47802?s=140" itemprop="photo" />
+              <img src="http://www.gravatar.com/avatar/34df2fcf73fb6b987f3e2ea2bcf47802?s=140" itemprop="photo" alt="Florent Viel" />
             </div>
             <br />
             <ul class="unstyled">
