--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,8 +49,8 @@
               <ul class="nav">
                 <li><a href="/a-propos/">A propos</a></li>
                 <li class="dropdown">
-                  <a class="dropdown-toggle" data-toggle="dropdown" href="#">Services</a>
-                  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="services">Services</a>
+                  <ul class="dropdown-menu" role="menu" aria-labelledby="services">
                     <li role="menuitem"><a href="http://git.luxifer.fr" target="_blank">Gitlab</a></li>
                     <li role="menuitem"><a href="http://cloud.luxifer.fr" target="_blank">Cloud privé</a></li>
                     <li role="menuitem"><a href="http://lxr.wf" target="_blank">URL Shortener</a></li>
