--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
                 <li><a href="/a-propos/">A propos</a></li>
                 <li class="dropdown">
                   <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="services">Services</a>
-                  <ul class="dropdown-menu" role="menu" aria-labelledby="services">
+                  <ul class="dropdown-menu" role="menu" aria-labelledby="Services">
                     <li role="menuitem"><a href="http://git.luxifer.fr" target="_blank">Gitlab</a></li>
                     <li role="menuitem"><a href="http://cloud.luxifer.fr" target="_blank">Cloud privé</a></li>
                     <li role="menuitem"><a href="http://lxr.wf" target="_blank">URL Shortener</a></li>
