--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -17,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 pre {
-    background-color: #fdf6e3;
+    background-color: #002b36;
     overflow: auto;
     code {
         white-space: pre;
