add: solarized dark + new post not published yet

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -17,7 +17,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 pre {
-    background-color: #002b36;
+    background-color: #073642;
+    color: #839496;
     overflow: auto;
     code {
         white-space: pre;
