--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,9 @@ layout: default
   <div class="span3">
     <div class="g-plusone"></div>
   </div>
+  <div class="span3">
+    <div class="fb-like" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true" data-font="arial"></div>
+  </div>
 </div>
 
 <div class="padding10">
