Fix: encoding and windows EOL problem

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -20,6 +20,7 @@ pre {
     background-color: #073642;
     color: #839496;
     overflow: auto;
+    white-space: pre;
     code {
         white-space: pre;
     }
