--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,6 +99,11 @@
             </ul>
           </div>
           {% endif %}
+          <div class="aside padding10 content">
+            <div id="tag-cloud">
+              {{ site | tag_cloud }}
+            </div>
+          </div>
         </div>
       </div>
     </div>
