--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -155,3 +155,19 @@ footer {
 .media hr {
     margin-bottom: 0;
 }
+
+.set-1 {
+    font-size: 16px;
+}
+.set-2 {
+    font-size: 18px;
+}
+.set-3 {
+    font-size: 20px;
+}
+.set-4 {
+    font-size: 22px;
+}
+.set-5 {
+    font-size: 24px;
+}
