--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,6 +100,8 @@
           </div>
           {% endif %}
           <div class="aside padding10 content">
+            <h4>Tags</h4>
+            <hr>
             <div id="tag-cloud">
               {{ site | tag_cloud }}
             </div>
