Add: link to tumblr

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
                   </ul>
                 </li>
                 <li><a href="http://florentviel.com" target="_blank">CV</a></li>
+                <li><a href="http://florentviel.tumblr.com" target="_blank">Microblog</a></li>
               </ul>
               <ul class="nav pull-right">
                 <li><a href="/atom.xml">RSS</a></li>
