--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,12 @@ article: true
 <div id="middle">
   <div id="article">
     {{ content }}
+    <br>
+    <p>
+      <small><em>
+        Si vous trouvez une typo, n'hésitez pas à <a href="{{ site.github.repo }}/edit/master/{{ page.path }}">forker et éditer cet article</a>. Merci beaucoup !
+      </em></small>
+    </p>
   </div>
   <div id="comments">
     {% include comments.html %}
