Add: geopattern for background

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 article: true
 ---
 
-<header class="{% if page.dark %}dark{% else %}clean{% endif %}" style="background-image: url({% if page.meta.thumb %}/images/{{ page.meta.thumb }}{% else %}{{ site.cover }}{% endif %}); height: 100%;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
+<header id="header-cover" class="{% if page.dark %}dark{% else %}clean{% endif %}" style="{% if page.meta.thumb %}background-image: url(/images/{{ page.meta.thumb }}); background-size: cover; background-repeat: no-repeat; {% endif %}height: 100%;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
   {% if page.video %}
     <video id="bg-video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0" data-stellar-ratio="0.5">
     {% for format in page.video %}
@@ -39,7 +39,7 @@ article: true
 </div>
 {% if page.next %}
   {% capture footer_style %}{% if page.next.dark %}dark{% else %}clean{% endif %}{% endcapture %}
-  {% capture footer_image %}{% if page.next.meta.thumb %}/images/{{ page.next.meta.thumb }}{% else %}{{ site.cover }}{% endif %}{% endcapture %}
+  {% capture footer_image %}{% if page.next.meta.thumb %}/images/{{ page.next.meta.thumb }}{% endif %}{% endcapture %}
   {% capture footer_message %}Read next{% endcapture %}
   {% capture footer_url %}{{ page.next.url }}{% endcapture %}
   {% capture footer_title %}{{ page.next.title }}{% endcapture %}
@@ -47,14 +47,14 @@ article: true
 {% else %}
   {% for post in site.related_posts limit:1 %}
     {% capture footer_style %}{% if post.dark %}dark{% else %}clean{% endif %}{% endcapture %}
-    {% capture footer_image %}{% if post.meta.thumb %}/images/{{ post.meta.thumb }}{% else %}{{ site.cover }}{% endif %}{% endcapture %}
+    {% capture footer_image %}{% if post.meta.thumb %}/images/{{ post.meta.thumb }}{% endif %}{% endcapture %}
     {% capture footer_message %}Featured post{% endcapture %}
     {% capture footer_url %}{{ post.url }}{% endcapture %}
     {% capture footer_title %}{{ post.title }}{% endcapture %}
     {% capture footer_quote %}{{ post.quote }}{% endcapture %}
   {% endfor %}
 {% endif %}
-<footer class="{{ footer_style }}" style="background-image: url({% if footer_image %}{{ footer_image }}{% else %}{{ site.cover }}{% endif %}); height: 75%; min-height: 500px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50" data-stellar-vertical-offset="50">
+<footer id="footer-cover" class="{{ footer_style }}" style="{% if footer_image != "" %}background-image: url({{ footer_image }}); background-size: cover; background-repeat: no-repeat; {% endif %}height: 75%; min-height: 500px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50" data-stellar-vertical-offset="50">
   <div id="nav-icon" style="top: 60px;" data-stellar-ratio="0.8">
     <a class="scroll" data-speed="500" href="#article"><span class="genericon genericon-collapse"></span></a>
   </div>
@@ -69,3 +69,17 @@ article: true
   </div>
   <p class="copyright">&copy; {{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
 </footer>
+{% if page.meta.thumb == false %}
+<script>
+  document.addEventListener("DOMContentLoaded", function(event) {
+    $('#header-cover').geopattern("{{ page.title }}");
+  });
+</script>
+{% endif %}
+{% if footer_image == "" %}
+<script>
+  document.addEventListener("DOMContentLoaded", function(event) {
+    $('#footer-cover').geopattern("{{ footer_title }}");
+  });
+</script>
+{% endif %}
